# Ibcc

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.md  README.md  Todo.md  fullcode.txt  main.c
Assets/: Shader.glsl
Core/: CMakeLists.txt  Common.h  Types.h
Core/Asset/: Asset.c  Asset.h
Core/Containers/: Array.c  Array.h  Hash.c  Hash.h  String.c  String.h
Core/Device/: Device.h  DeviceGlfw.c
Core/FixedMath/: FixedMath.c  FixedMath.h  FixedMathLut.h
Core/FixedPoint/: FixedMatrix.c  FixedMatrix.h  FixedPoint.c  FixedPoint.h  FixedPointLut.h  FixedVector.c  FixedVector.h
Core/Graphics/: Graphics.h  GraphicsGL.c  ShaderTest.h
Core/HandmadeMath/: HandmadeMath.c  HandmadeMath.h
Core/Log/: Log.c  Log.h
Core/Math/: GlMath.c  GlMath.h  Math.c  Math.h
Core/Os/: Allocator.c  Allocator.h  File.c  File.h  Log.c  Log.h  Platform.h  Plugin.c  Plugin.h  Time.c  Time.h
Core/Plugin/: Plugin.c  Plugin.h
Core/SoftFloat/: SoftFloat.c  SoftFloat.h  SoftMatrix.c  SoftMatrix.h  SoftVector.c  SoftVector.h
Core/Src/: Containers.c  Os.c  SoftFloat.c
Engine/: CMakeLists.txt
Engine/Asset/: Asset.c  Asset.h  AssetGlue.c  CMakeLists.txt
Engine/Asset/Json/: Json.c  Json.h
Engine/Asset/Model/: Model.c  Model.h  ObjParser.h
Engine/Asset/Shader/: Shader.c  Shader.h
Engine/Asset/Texture/: Texture.c
Engine/Controller/: Controller.c  Controller.h
Engine/Device/: CMakeLists.txt  Device.c  Device.h
Engine/Font/: Arial.h  CMakeLists.txt  Font.c  Font.h
Engine/Game/: CMakeLists.txt  Game.c  Game.h
Engine/Game/Controller/: Controller.c  Controller.h
Engine/Game/Primitives/: Cube.h
Engine/Game/Render/Draw/: Draw.c
Engine/Game/Render/Shaders/: UnlitColor.h  UnlitShader.h
Engine/Game/Shaders/: Common.h  UnlitShader.h
Engine/Graphics/: CMakeLists.txt  Graphics.c  Graphics.h
Engine/Json/: CMakeLists.txt  Json.c  Json.h
Engine/Model/: CMakeLists.txt  Model.c  Model.h  Reference.md
Engine/Render/Draw/: Draw.c  Draw.h
Engine/Scene/: CMakeLists.txt  Camera.c  Camera.h  Scene.c  Scene.h
Engine/Shader/: CMakeLists.txt  Shader.c  Shader.h
Engine/Shaders/: BlinnPhongShader.h  Common.h  DepthShader.h  FontShader.h  Lights.h  Lit.h  SpriteShader.h  Unlit.h  UnlitColor.h  UnlitShader.h  UnlitVertexColorShader.h
Engine/Texture/: CMakeLists.txt  Texture.c  Texture.h
Game/: CMakeLists.txt  Game.c
Graph/: CMakeLists.txt
Graph/Controller/: Controller.h
Graph/Draw/: Draw.c  Draw.h
Graph/Interface/: Sprite.c  Sprite.h  Text.c  Text.h
Graph/Scene/: Scene.c  Scene.h
Graph/Sprite/: Sprite.c  Sprite.h
Graph/Text/: Text.c  Text.h
Physics/: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/Asset/: Asset.c  Asset.h  Bundle.c  Bundle.h  CMakeLists.txt  Vfs.c  Vfs.h
Plugins/Device/: CMakeLists.txt  Device.c  Device.h
Plugins/Game/: CMakeLists.txt  Game.c
Plugins/Graphics/: CMakeLists.txt  Graphics.c  Graphics.h
Plugins/Json/: CMakeLists.txt  Json.c  Json.h
Shaders/: Gizmos.fs  Gizmos.vs  Lit.fs  Lit.vs  Skybox.fs  Skybox.vs
Src/: Allocator.c  Allocator.h  BrdfLut.c  BrdfLut.h  Controller.c  Controller.h  Device.c  Device.h  GlMath.c  GlMath.h  Graphics.c  Graphics.h  GroundRenderer.c  GroundRenderer.h  Gui.c  Gui.h  ManipulatorDemo.c  ManipulatorDemo.h  Model.c  Model.h  PrefilterEnv.c  PrefilterEnv.h  Scene.c  Scene.h  SceneView.c  SceneView.h  ShadowRenderer.c  ShadowRenderer.h  Skybox.c  Skybox.h  Window.c  Window.h  Wire.c  Wire.h
Src/Shaders/: Common.h
Tools/: CMakeLists.txt  shgen.cpp
Tools/EmbedFile/: CMakeLists.txt  main.c
Tools/Model/: FbxTool.cpp  FbxTool.h
Tools/ModelTool/: CMakeLists.txt  Model.h  main.cpp
